fix rice ball image stretching issue

--- a/src/Component/AboutUsSection/about-us-section.module.scss
+++ b/src/Component/AboutUsSection/about-us-section.module.scss
@@ -368,6 +368,8 @@
       }
       .musubiImage {
         width: 40%;
+        height: 100%;
+        margin: auto;
       }
     }
 
